# NNDS-HW

./: .gitattributes  .gitignore  NNDS_2025_Original.ipynb  README.md  Rocci - NNDS HW.ipynb  pyproject.toml
assets/: training_history_50epochs.pkl
data/: best_model_5.eqx  best_model_50.eqx  processed_reviews.csv  test_x.npy  test_y.npy  tokenizer.json  train_x.npy  train_y.npy  val_x.npy  val_y.npy
src/: analyze_evictions.py  benchmark_compression.py  compression.py  data_analysis.py  data_processing.py  model.py  predict.py  tokenizer_dev.py  train.py
