[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.4.0",
    "annotated-doc==0.0.4",
    "anyio==4.12.1",
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "certifi==2026.1.4",
    "chex==0.1.90",
    "click==8.3.1",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "equinox==0.11.10",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "filelock==3.24.3",
    "fonttools==4.61.1",
    "fsspec==2026.2.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.4.1",
    "idna==3.11",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "jax==0.4.35",
    "jax-metal==0.1.1",
    "jaxlib==0.4.35",
    "jaxtyping==0.3.9",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.4.9",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.4",
    "mpmath==1.3.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "opt-einsum==3.4.0",
    "optax==0.2.5",
    "packaging==26.0",
    "pandas==3.0.1",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.2",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "regex==2026.2.19",
    "rich==14.3.3",
    "rpds-py==0.30.0",
    "safetensors==0.7.0",
    "scipy==1.17.0",
    "seaborn==0.13.2",
    "setuptools==82.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "tokenizers==0.22.2",
    "toolz==1.1.0",
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "tornado==6.5.4",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "transformers==5.2.0",
    "typer==0.24.1",
    "typer-slim==0.24.0",
    "typing-extensions==4.15.0",
    "wadler-lindig==0.1.7",
    "wcwidth==0.6.0",
    "wheel==0.46.3",
    "widgetsnbextension==4.0.15",
]
